[package]
name = "kube-axum-cert-manager"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "^0.8.8"
base64 = "^0.22.1"
chrono = "^0.4.44"
data-encoding = "^2.10.0"
futures = "^0.3.32"
hyper = "^1.8.1"
# TODO: try to eliminate use of hyper-util?
hyper-util = { version = "^0.1.20", features = [
    "server", "http1", "http2", "tokio", "service"
] }
k8s-openapi = {version = "^0.27.1", default-features = false}
kube = {version ="^3.0.1", default-features = false, features = [
    "kube-runtime", "runtime", "derive", "kube-derive", "client", "config",
    "rustls-tls", "aws-lc-rs"
]}
lazy_static = "^1.5.0"
pin-project = "^1.1.11"
schemars = "^1.2.1"
serde = "^1.0.228"
serde_json = "^1.0.149"
thiserror = "^2.0.18"
tokio = "^1.50.0"

tokio-rustls = {version = "^0.26.4", default-features = false, features = ["aws_lc_rs",]}
rustls = { version = "^0.23.38", default-features = false, features = [
    "std", "logging", "prefer-post-quantum", "aws-lc-rs"
]}

tokio-stream = {version = "^0.1.18", features = ["net"] }

[features]
default = ["v1_35"]

v1_31=["k8s-openapi/v1_31"]
v1_32=["k8s-openapi/v1_32"]
v1_33=["k8s-openapi/v1_33"]
v1_34=["k8s-openapi/v1_34"]
v1_35=["k8s-openapi/v1_35"]

# TODO: fips may introduce extra build requirements, incluidng cmake and go installations
# fips=[
#     "rustls/fips",
# ]